--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,16 @@ body {
 	background-color: black;
 }
 
+h1, h2 {
+	color: #dbdbce;
+	font-family: 'Changa One', cursive;
+	font-size: 8vw;
+	text-align: center;
+}
+h2 {
+	
+}
+
 img {
 	width: 95%;
 	max-width: 600px;
@@ -9,7 +19,7 @@ img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 40px;
+	margin-top: 20px;
 }
 
 p {
